# nova-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Bootstrap.ps1  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES.md  nova_core.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
commands/: __init__.py  handlers.py  registry.py
conversation/: __init__.py  dialogue_manager.py  nlg.py  nlu.py
docs/: NovaPlan.md
docs/examples/: output-daily-summary.txt  transcript-chat-once.txt
internet/: __init__.py  fetch.py  filters.py  search.py  summarize.py
memory/: __init__.py  consolidator.py  indexing.py  store.py
nova/: __init__.py  config.py  jobs.py  logging_setup.py  permissions.py  privileged.py  scheduler.py  utils.py  windows.py
scripts/: Install-Nova.ps1  run-chat-once.ps1  run-daily-summary.ps1  schedule-nightly.ps1
security/: admin_helper.py  policies.py
tests/: test_boot.py  test_commands.py  test_conversation.py  test_internet.py  test_jobs.py  test_learning.py  test_logging.py  test_memory.py  test_permissions.py  test_scheduler.py  test_security.py  test_tooling.py  test_ui.py  test_windows.py  test_workspace.py
ui/: cli.py
workspace/: __init__.py  affect.py  bus.py  self_model.py
