[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-assistant"
version = "0.1.0"
description = "Nova: Local deterministic AI assistant"
readme = "README.md"
authors = [{ name = "Nova" }]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.4.0",
  "colorama>=0.4.6",
  "typer>=0.12.0"
]
keywords = ["assistant", "cli", "deterministic", "offline", "privacy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Environment :: Console",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/imthatjaz-wq/nova-ai"
Repository = "https://github.com/imthatjaz-wq/nova-ai"

[project.scripts]
nova = "ui.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools]
packages = [
  "nova",
  "conversation",
  "memory",
  "internet",
  "commands",
  "workspace",
  "ui",
  "security",
]
