[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
show_error_codes = true
pretty = true
warn_return_any = true
warn_unreachable = true
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-assistant"
dynamic = ["version"]
description = "Nova: Local deterministic AI assistant"
readme = "README.md"
authors = [{ name = "Nova" }]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.4.0",
  "colorama>=0.4.6",
  "typer>=0.12.0"
]
keywords = ["assistant", "cli", "deterministic", "offline", "privacy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Environment :: Console",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/imthatjaz-wq/nova-ai"
Repository = "https://github.com/imthatjaz-wq/nova-ai"

[project.scripts]
nova = "ui.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pre-commit>=3.6.0",
  "ruff>=0.6.1",
  "mypy>=1.10.0",
]

[tool.setuptools]
packages = [
  "nova",
  "conversation",
  "memory",
  "internet",
  "commands",
  "workspace",
  "ui",
  "security",
]

[tool.setuptools.dynamic]
version = { attr = "nova.__version__" }
